--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -24,6 +24,7 @@
 
 
 {{ if .IsDescendant (.GetPage "/docs") }}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css">
 {{ if not (eq . (.GetPage "/docs"))}}
 {{ $style := resources.Get "scss/doc.scss" | toCSS | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}">
