--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -226,6 +226,37 @@ section {
   }
 }
 
+.search-input-div {
+  position: relative;
+  height: 36px;
+  padding-left: 18px;
+  padding-right: 40px;
+  border-radius: 18px;
+  background-color: #ffffff;
+
+  .algolia-autocomplete {
+    width: 100%;
+    height: 100%;
+  }
+
+  input {
+    width: 100%;
+    height: 20px;
+    margin-top: 8px;
+    font-size: 14px;
+    line-height: 20px;
+    border: none;
+    outline: none;
+    color: #657480;
+  }
+
+  svg {
+    position: absolute;
+    right: 18px;
+    top: 11px;
+  }
+}
+
 .notices {
   margin: 20px 0;
   position: relative;
