--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -11,6 +11,10 @@ body {
     padding-bottom: 20px;
     background-image: url("/images/docs/banner.png");
 
+    .common-layout {
+        position: relative;
+    }
+
     .breadcrumbnav {
         li {
             display: inline;
@@ -31,7 +35,7 @@ body {
 
     .title-div {
         height: 20px;
-        margin-top: 6px; 
+        margin-top: 20px; 
         h1 {
             display: inline-block;
             vertical-align: middle;
@@ -57,6 +61,19 @@ body {
             }
         }
     }
+
+    .search-div {
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+        width: 560px;
+        margin-top: 20px;
+  
+        @media only screen and (max-width: $mobile-max-width) {
+          position: relative;
+          width: 100%;
+        }
+      }
 }
 
 .section-menu {
@@ -605,7 +622,7 @@ body {
   
     .aside-fixed {
         position: fixed;
-        top: 250px;
+        top: 260px;
         left: 50%;
         transform: translateX(500px);
     }
