--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -48,6 +48,7 @@
             margin-left: 16px;
             color: #ccd3db;
             border: none;
+            outline: none;
             background-color: #f5f8f9;
           }
 
