--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,8 +12,15 @@
 <meta property="og:image" content="{{ with .Params.snapshot }}{{ . }}{{ else }}{{ with .Site.Params.snapshot }}{{ . | absURL }}{{ end }}{{ end }}"/>
 <meta property="og:url" content="{{ .Permalink }}"/>
 
+<meta name="docsearch:language" content="{{ .Site.LanguageCode }}" />
+
 {{- partial "css.html" . -}}
 
 <script src='{{ "js/jquery-3.5.0.min.js" | relURL }}'></script>
 <script src='{{ "js/viewer.min.js" | relURL }}'></script>
 <script src='{{ "js/jquery.modal.min.js" | relURL }}'></script>
+
+{{ if .IsDescendant (.GetPage "/docs") }}
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+{{ end }}
+
