--- a/layouts/partials/searchInput.html
+++ b/layouts/partials/searchInput.html
@@ -1,5 +1,5 @@
 <div class="search-input-div">
-  <input id="search" type="text" placeholder="{{i18n "Enter keywords to get help quickly"}}">
+  <input id="search" type="text" placeholder="{{i18n "Search Documentation"}}">
   <svg width="1em" height="1em" viewBox="0 0 18 18">
     <g fill="none" fill-rule="evenodd">
       <path d="M12.606 11.192l5.24 5.24-1.415 1.414-5.239-5.24a7.041 7.041 0 0 0 1.414-1.414z" fill="#324558"></path>
@@ -18,7 +18,11 @@ docsearch({
   transformData: function(hits) {
     hits.forEach(hit => {
       if (typeof window !== undefined) {
-        hit.url = hit.url.replace('kubesphere.io', window.location.host)
+        var host = window.location.host
+        if (host == 'kubesphere.com.cn' && language == 'en') {
+          host = host + '/en'
+        }
+        hit.url = hit.url.replace('kubesphere.io', host)
       }
     })
     return hits
