--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -164,7 +164,7 @@
 }
 
 .md-body h2 {
-  font-size: 32px;
+  font-size: 1.8em;
   font-weight: normal;
   line-height: 1.63;
   text-align: center;
