--- a/assets/scss/partner.scss
+++ b/assets/scss/partner.scss
@@ -360,6 +360,7 @@
           font-size: 14px;
           line-height: 1.71;
           color: #ffffff;
+          overflow: auto;
         }
       }
     }
