--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -183,12 +183,15 @@
             font-size: 11px;
             line-height: 34px;
             text-align: center;
-            color: #ffffff;
             border-radius: 17px;
             box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
             background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #242e42, #242e42);          
             &:hover {
               box-shadow: none;
+            }
+
+            a {
+              color: #ffffff;
             }
           }
         }
