--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,9 +33,9 @@
                         {{ range .Children }}
                         <li {{ if eq $section .URL }} class="active"{{ end}}>
                             {{ if hasPrefix .URL "http" }}
-                            <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
+                            <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name | safeHTML }}</a>
                             {{ else }}
-                            <a href="{{ .URL | relLangURL }}">{{ .Name }}</a>
+                            <a href="{{ .URL | relLangURL }}">{{ .Name | safeHTML }}</a>
                             {{ end }}
                         </li>
                         {{ end }}
