--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -93,6 +93,10 @@
                                 <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener noreferrer">facebook</a>
                             </li>
                             <li>
+                                <img src="/images/docs/reddit.svg" alt="reddit">
+                                <a href="http://reddit.com/submit?url={{ .Permalink }}&title={{ .Title }}" target="_blank" rel="noopener noreferrer">reddit</a>
+                            </li>
+                            <li>
                                 <img src="/images/docs/email.svg" alt="email" >
                                 <a href="mailto:kubesphere@gmail.com" target="_blank" rel="noopener noreferrer">email</a>
                             </li>
