--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -601,7 +601,7 @@ body {
         .inner-div {
             max-height: 100%;
             position: relative;
-            overflow: scroll;
+            overflow-y: scroll;
             padding-left: 10px;
             border-left: 1px solid #dde1e6;
         }
