fix docs table style
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -29,7 +29,6 @@
 .md-body a {
   color: #55bc8a;
   text-decoration: none;
-  word-break: break-word;
 }
 
 .md-body .absent {
@@ -251,6 +250,10 @@
   width: 100%;
   overflow: auto;
   border-collapse: collapse;
+}
+
+.md-body table a {
+  word-break: break-word;
 }
 
 .md-body table th {
