Update previous page UI
Signed-off-by: Sherlock113 <sherlockxu@yunify.com>

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -124,8 +124,8 @@
                     {{ with .Next }}
                     <!-- {{ if .IsDescendant (.GetPage "/docs")}} -->
                         <a class="last" href="{{.RelPermalink}}">
-                            <img src="/images/docs/last.svg" alt="{{ i18n "Last" }}">
-                            {{ i18n "Last" }}
+                            <img src="/images/docs/last.svg" alt="{{ i18n "Previous" }}">
+                            {{ i18n "Previous" }}
                             <span>: {{.LinkTitle}}</span>
                         </a>
                     <!-- {{ end }} -->
