--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -388,7 +388,7 @@ section {
   z-index: 2;
   width: 20px;
   height: 20px;
-  background-image: url('/images/docs/copy-code.svg');
+  background-image: url('/images/docs/copy.png');
   background-repeat: no-repeat;
   background-size: cover;
   cursor: pointer;
