--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,6 +25,7 @@
 {{ end }}
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
+{{ if .Site.Params.addGoogleAnalytics }}
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YYCVN36HT5"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -33,6 +34,19 @@
 
   gtag('config', 'G-YYCVN36HT5');
 </script>
+{{ end }}
+
+{{ if .Site.Params.addGoogleTag }}
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W9FLX4R');</script>
+<!-- End Google Tag Manager -->
+
+<script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0100/4419.js" async="async"></script>
+{{ end }}
 
 
 
