--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -5,6 +5,12 @@
 </head>
 
 <body>
+{{ if .Site.Params.addGoogleTag }}
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9FLX4R"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+{{ end }}  
 {{- partial "header.html" . -}}
 <main class='main-section {{ if eq .Site.Language.Lang "zh"}} padding{{ end }}'>
     <section class='section-1 bg-cover'>
