--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -15,6 +15,12 @@
 
 
 <body>
+{{ if .Site.Params.addGoogleTag }}
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W9FLX4R"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+{{ end }}   
   {{ partial "header.html" $context }}
   <section class="main-section {{ if eq .context.Site.Language.Lang "zh"}} padding{{ end }}">
       <div class="common-layout">
