--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,13 +26,14 @@
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 {{ if .Site.Params.addGoogleAnalytics }}
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YYCVN36HT5"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-181950513-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-YYCVN36HT5');
+
+  gtag('config', 'UA-181950513-1');
 </script>
 {{ end }}
 
