--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@
     <img class='img2' src="/images/home/left.svg" alt="{{ i18n "background image"}}">
     <img class='img4' src="/images/home/46.svg" alt="{{ i18n "background image"}}">
   </div>
-  <img class='img1' src="/images/home/bg.jpg" alt="{{ i18n "background image"}}">
+  <img class='img1' src="/images/home/bg.png" alt="{{ i18n "background image"}}">
   <img class='img2' src="/images/home/12-3.png" alt="{{ i18n "background image"}}">
   <img class='img3' src="/images/home/2.svg" alt="{{ i18n "background image"}}">
   {{ end }}
