update twitter share url
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -1,5 +1,5 @@
 <div class="share">
-  <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">
+  <a href="https://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">
     <img src="/images/share/Twitter.svg" alt="twitter icon">
   </a>
   <a href="http://reddit.com/submit?url={{ .Permalink }}&title={{ .Title }}" target="_blank" rel="noopener noreferrer">
