update twittet share url in docs
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -95,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <ul>
                                 <li>
                                     <img src="/images/docs/twitter.svg" alt="twitter">
-                                    <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">twitter</a>
+                                    <a href="https://twitter.com/intent/tweet?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener noreferrer">twitter</a>
                                 </li>
                                 <li>
                                     <img src="/images/docs/linkedIn.svg" alt="linkedIn">
