--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -51,6 +51,10 @@ main {
             letter-spacing: -0.06px;
             color: #ffffff;
             text-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+
+            a {
+                color: #ffffff;
+            }
         }
 
         .menu {
