--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -26,7 +26,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         {{ $secondSection = . }}
                     {{ end }}
                 {{ end }}
-                <h1>{{ $secondSection.LinkTitle }}</h1>
+                <h1><a href="{{ $secondSection.RelPermalink }}">{{ $secondSection.LinkTitle }}</a></h1>
                 <div class="menu section-control">
                     <div></div>
                     <div></div>
