--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -179,7 +179,9 @@
 
   .right-menu {
     position: absolute;
-    top: 28px;
+    height: 36px;
+    top: 50%;
+    transform: translateY(-50%);
     right: 0;
 
     & > ul {
@@ -327,6 +329,10 @@
 .navigationScroll {
   box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.06), 0 8px 16px 0 rgba(36, 46, 66, 0.05);
   background-image: linear-gradient(to bottom, rgba(134, 219, 162, 0.9), rgba(0, 170, 114, 0.9));
+}
+
+.navigationHeight {
+  height: 50px;
 }
 
 .jquery-modal {
