add meetup register entry in header
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            🚀 KubeSphere v3.0.0 正式 GA！<a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费回看 v3.0 发布会视频 📺</a>
-            <a href="https://kubesphere.com.cn/forum/d/2062-awesome-kubesphere-kubesphere-3-0" target="_blank" rel="noopener noreferrer">了解一键快速安装入门的最佳方式📚 →</a>
+            🚀 12.19 相约北京！<a href="https://kubesphere.com.cn/forum/d/2712-meetup-topic" target="_blank" rel="noopener noreferrer">云原生 Meetup 邀您免费报名参加！🙋‍♂️</a>
+            <a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费回看 v3.0 发布会视频 📺 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
