--- a/layouts/index.html
+++ b/layouts/index.html
@@ -190,7 +190,7 @@
   {{ end }}
 </section>
 
-{{ if eq .Site.Language.Lang "zh"}}
+<!-- {{ if eq .Site.Language.Lang "zh"}}
 <div class="meet-div">
   <img class="close" src="/images/home/close.svg" alt="close">
   <img src="/images/home/group-18.svg" alt="{{ i18n "icon" }}">
@@ -199,7 +199,7 @@
   <img class="img-3" src="/images/home/二维码.jpg" alt="二维码">
   <img class="img-4" src="/images/home/group-19.svg" alt="{{ i18n "icon" }}">
 </div>
-{{ end }}
+{{ end }} -->
 
 <script>
   var bindMouseLeftLi = function() {
