--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            🚀 12.19 相约北京！<a href="https://kubesphere.com.cn/forum/d/2712-meetup-topic" target="_blank" rel="noopener noreferrer">云原生 Meetup 邀您免费报名参加！🙋‍♂️</a>
+            🚀KubeSphere on Cloud 全新上线！<a href="https://www.qingcloud.com/products/kubesphereqke/" target="_blank" rel="noopener noreferrer">选择 QKE</a> 或 <a href="https://aws.amazon.com/quickstart/architecture/qingcloud-kubesphere/" target="_blank" rel="noopener noreferrer">KubeSphere on AWS</a> 一键部署集群👩‍💻
             <a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费回看 v3.0 发布会视频 📺 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
